Implemented CinemaController and error handling.
